# aimy_target_shooting

./: .gitignore  LICENSE  MLP_model.hdf5  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_black.yml
aimy_target_shooting/: ball_launcher_api.py  configuration.py  control_panel.py  custom_types.py  data_scaler.py  export_tools.py  filtering.py  hitpoint_detection.py  hitpoint_utils.py  learning_utils.py  recording.py  target_shooting_nn.py  transform.py  utility.py
config/: hitpoint.json  launcher.json  learning.json  preprocessing.json  recording.json
docs/: changelist.md  conf.py  index.rst
docs/_static/css/: gsm.css
notebooks/: dataset_visualisation.ipynb  launcher_evaluation.ipynb  motor_characteristics.ipynb  target_shooting_evaluation.ipynb
scripts/: launch_ball.py  launch_ball_nn.py  preprocessing.py  recording.py  run_control_panel.py
tests/: test_custom_types.py  test_data_scaler.py  test_export.py
