[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aimy_target_shooting"
version = "0.0.1"
requires-python = ">3.8"
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "h5py",
    "pytest",
    "seaborn",
    "tensorflow",
]